[YGB-73] Update color scheme

--- a/docroot/prototypes/branch_future/src/html/poc-schedule.html
+++ b/docroot/prototypes/branch_future/src/html/poc-schedule.html
@@ -3,7 +3,7 @@
 <head>
   //= ../template/head-schedule.html
 </head>
-<body class="page-info page-schedule">
+<body class="page-info page-schedule scheme-orange">
 //= ../template/header-entry.html
 
 <div class="status" style="z-index: 1000;bottom: 50%; right: 0;position: absolute; font-size: 9px; color: white; background-color: rgba(0, 0, 0, 0.5);"></div>
